--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -25,7 +25,7 @@
     <div class="card-content">
       <div class="media-content">
         <p class="title is-4">{{card.title}}</p>
-        <p class="subtitle is-6">{{card.userName}}</p>
+        <p class="subtitle is-6">@{{card.userName}}</p>
       </div>
       <div class="content">
         {{card.content}}
